kubectl_deploy_staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ubistaging-service
  labels:
    app: ubistaging
spec:
  ports:
  - port: 5001
    name: http
    targetPort: 8080
  selector:
    app: ubistaging
